--- a/Style/main.css
+++ b/Style/main.css
@@ -22,7 +22,7 @@
 /* ===== Colours ===== */
 :root{
     --body-color: #E4E9F7;
-    --nav-color: #4070F4;
+    --nav-color: #e4bfa7;
     --side-nav: #010718;
     --text-color: #FFF;
     --search-bar: #F2F2F2;
@@ -357,3 +357,6 @@ body{
     margin:0% 3%;
     }
     }
+
+    
+    
