--- a/Style/main.css
+++ b/Style/main.css
@@ -7,7 +7,11 @@
     
 }
 
-
+.logo-couronne {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+}
 
 /* ===== Google Font Import - Poppins ===== */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
